--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
   "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "exclude": ["server"],
+  "references": [{ "path": "./server/tsconfig.json" }]
 }
