--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.7",
-    "worker-functions": "^0.4.0"
+    "worker-functions": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@cloudflare/workers-types": "^4.20230221.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3",
