--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,5 +6,5 @@
     "types": ["@cloudflare/workers-types/experimental"],
     "composite": true
   },
-  "include": ["*.worker.ts"]
+  "include": ["*.ts"]
 }
